@@ -6,11 +6,14 @@ import lombok.SneakyThrows;
 import org.example.data.TimeInfo;
 import org.example.log.FileLoger;
 
+import java.io.BufferedReader;
+import java.io.InputStreamReader;
+import java.net.HttpURLConnection;
 import java.net.URI;
 import java.net.URL;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
+//import java.net.http.HttpClient;
+//import java.net.http.HttpRequest;
+//import java.net.http.HttpResponse;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Random;
@@ -28,23 +31,31 @@ public class LoadClient implements Runnable {
     int requestCount;
     int timeout;
 
-    private final HttpClient client;
-    private HttpRequest request;
+    private HttpURLConnection connection;
+
+    //private final HttpClient client;
+    //private HttpRequest request;
 
     private final ObjectMapper mapper;
 
     @SneakyThrows
     public LoadClient(int id, String url, int requestCount, int timeout) {
 
+
         this.id = id;
         this.url = new URL(url);;
         this.requestCount = requestCount;
         this.timeout = timeout;
 
-        this.client = HttpClient.newHttpClient();
-        request = HttpRequest.newBuilder()
-                .uri(this.url.toURI())
-                .build();
+        //connection
+        this.connection = (HttpURLConnection) this.url.openConnection();
+        connection.setRequestMethod("GET");
+        connection.setRequestProperty("Content-Type", "application/json");
+
+        //this.client = HttpClient.newHttpClient();
+        //request = HttpRequest.newBuilder()
+        //        .uri(this.url.toURI())
+        //        .build();
 
         mapper = new ObjectMapper();
 
@@ -60,10 +71,15 @@ public class LoadClient implements Runnable {
         this.requestCount = requestCount;
         this.timeout = timeout;
 
-        this.client = HttpClient.newHttpClient();
-        request = HttpRequest.newBuilder()
-                .uri(URI.create(this.urlPool.get(0)))
-                .build();
+        //connection
+        //this.connection = (HttpURLConnection) this.url.openConnection();
+        //connection.setRequestMethod("GET");
+        //connection.setRequestProperty("Content-Type", "application/json");
+
+        //this.client = HttpClient.newHttpClient();
+        //request = HttpRequest.newBuilder()
+        //        .uri(URI.create(this.urlPool.get(0)))
+        //        .build();
 
         mapper = new ObjectMapper();
 
@@ -75,6 +91,11 @@ public class LoadClient implements Runnable {
     @SneakyThrows
     public void sendAll(){
         for(int i = 0; i < requestCount; i++){
+            //connection
+            this.connection = (HttpURLConnection) url.openConnection();
+            connection.setRequestMethod("GET");
+            connection.setRequestProperty("Content-Type", "application/json");
+
             long sendTime = System.currentTimeMillis();
             String result = sendRequest();
             long getTime = System.currentTimeMillis();
@@ -89,9 +110,14 @@ public class LoadClient implements Runnable {
     public void sendAllRandom(){
         for(int i = 0; i < requestCount; i++){
 
-            request = HttpRequest.newBuilder()
-                    .uri(URI.create(this.urlPool.get(random.nextInt(this.urlPool.size() -1))))
-                    .build();
+            //request = HttpRequest.newBuilder()
+            //        .uri(URI.create(this.urlPool.get())
+            //        .build();
+            URL tmpUrl = new URL(urlPool.get(random.nextInt(this.urlPool.size() -1)));
+            this.connection = (HttpURLConnection) tmpUrl.openConnection();
+            connection.setRequestMethod("GET");
+            connection.setRequestProperty("Content-Type", "application/json");
+
             long sendTime = System.currentTimeMillis();
             String result = sendRequest();
             long getTime = System.currentTimeMillis();
@@ -105,7 +131,7 @@ public class LoadClient implements Runnable {
 
     private String prepareLogInfo(int requestId, TimeInfo timeInfo, long absoluteTime){
         if(timeInfo.getBackendWorkTime() == null || timeInfo.getDbWorkTime() == null){
-            return "Client " + this.id + " send " + requestId + " requests;" + " no info about working time";
+            return "Client " + this.id + " send " + requestId + " requests;" + " no info about working time" + "; absolute time " + absoluteTime;
         }
         else{
             return "Client " + this.id + " send " + requestId + " requests; send time: " + System.currentTimeMillis() + "; "
@@ -116,10 +142,24 @@ public class LoadClient implements Runnable {
 
     @SneakyThrows
     public String sendRequest(){
-        HttpResponse<String> response = client.send(request,
-                HttpResponse.BodyHandlers.ofString());
-        return response.body();
+        //HttpResponse<String> response = client.send(request,
+        //        HttpResponse.BodyHandlers.ofString());
+        //return response.body();
 
+        //?
+        //connection.setDoOutput(true);
+
+
+        BufferedReader in = new BufferedReader(new InputStreamReader(connection.getInputStream()));
+        String inputLine;
+        StringBuffer response = new StringBuffer();
+
+        while ((inputLine = in.readLine()) != null) {
+            response.append(inputLine);
+        }
+        in.close();
+
+        return response.toString();
     }
 
     @Override
